1. tag 排序调整 2. tag页title调整 3. 标签文案改成索引

--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -61,7 +61,7 @@ page.banner_mask_alpha = theme.index.banner_mask_alpha
         <% if(theme.index.post_meta.tag && post.tags.length > 0) { %>
           <div class="post-meta">
             <i class="iconfont icon-tags"></i>
-            <% post.tags.each(function(tag){ %>
+            <% post.tags.reverse().each(function(tag){ %>
               <a href="<%= url_for(tag.path) %>"><%- tag.name %></a>
             <% }) %>
           </div>
