--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -39,7 +39,7 @@ page.banner_mask_alpha = page.banner_mask_alpha || theme.post.banner_mask_alpha
                 <% if (page.tags && page.tags.length > 0 ) { %>
                   <div class="post-meta">
                     <i class="iconfont icon-tags"></i>
-                    <% page.tags.each(function(tag) { %>
+                    <% page.tags.reverse().each(function(tag) { %>
                       <a class="hover-with-bg" href="<%= url_for(tag.path) %>"><%- tag.name %></a>
                     <% }) %>
                   </div>
