--- a/layout/_partial/archive-list.ejs
+++ b/layout/_partial/archive-list.ejs
@@ -1,17 +1,27 @@
 <div class="list-group">
-  <p class="h4"><%= __('postTotal', params.postTotal) %></p>
-  <hr>
-  <% var dateCursor %>
-  <% page.posts.each(function (post) { %>
-    <% if(date(post.date, "YYYY") !== dateCursor) { %>
-      <% dateCursor = date(post.date, "YYYY") %>
-      <p class="h5"><%= dateCursor %></p>
+    <p class="h4"><%= __('postTotal', params.postTotal) %></p>
+    <!--   新增  总字数统计-->
+    <% if(page.layout === "archive") { %>
+        <div class="mt-1">
+        <span class="post-meta mr-2">
+          <i class="iconfont icon-chart"></i>
+          <%= params.wordCount %> 字
+        </span>
+        </div>
     <% } %>
-    <a href="<%= url_for(post.path) %>" class="list-group-item list-group-item-action">
-      <span class="archive-post-title"><%= post.title %></span>
-      <time style="float: right;"><%= date(post.date, "MM-DD") %></time>
-    </a>
-  <% }) %>
+
+    <hr>
+    <% var dateCursor %>
+    <% page.posts.each(function (post) { %>
+        <% if(date(post.date, "YYYY") !== dateCursor) { %>
+            <% dateCursor = date(post.date, "YYYY") %>
+            <p class="h5"><%= dateCursor %></p>
+        <% } %>
+        <a href="<%= url_for(post.path) %>" class="list-group-item list-group-item-action">
+            <span class="archive-post-title"><%= post.title %></span>
+            <time style="float: right;"><%= date(post.date, "MM-DD") %></time>
+        </a>
+    <% }) %>
 </div>
 
 <%- partial('_partial/paginator') %>
